--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@
     <!-- Nueva sección SIN NIÑOS -->
 <div class="sin-ninos-section"> 
         <h2>¡NO NIÑOS!</h2>
-        <p class="centered-paragraph"> <img class="child-icon" src="/Source/ninos.png" alt=""><br>
+        <p class="centered-paragraph"> <img class="child-icon" src="Source/ninos.png" alt=""><br>
              Queremos que disfruten al máximo con nosotros, por lo que la celebración será <br>
              ¡Solo adultos, por favor!</p>
         
@@ -1107,3 +1107,4 @@ const iOsCalendarLink = `webcal://www.google.com/calendar/event?text=Boda+Carlos
     </script>
 </body>
 </html>
+
